@@ -33,6 +33,10 @@
 	            <firstname>David</firstname>
 	            <surname>Montag</surname>
 	        </author>
+	        <author>
+	            <firstname>Andreas</firstname>
+	            <surname>Kollegger</surname>
+	        </author>
 	    </authorgroup>
 
 	    <legalnotice>
